@@ -29,7 +29,7 @@ function load_form_data() {
    var cookie = getCookie('codestriker_add_comment_form_data');
    if (cookie == null || cookie == '') return null;
 
-   // delete the cookie (so that it doesn't persist between different
+   // Delete the cookie (so that it doesn't persist between different
    // comment pages).
    setCookie('codestriker_add_comment_form_data', '', 1);
 
